# genai-backend

./: .gitignore  CONTRIBUTORS.txt  LICENSE  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  example.env  extend_readme.md  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
common/: models.py  serializers.py  tests.py  utils.py
compose/production/traefik/: traefik.yml
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
conversation/: admin.py  filters.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
conversation/migrations/: 0001_initial.py  0002_alter_conversation_title.py
conversation/tests/: test_models.py  test_tasks.py  test_views.py  test_viewsets.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
genaibackend/: conftest.py
genaibackend/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
genaibackend/templates/: base.html
genaibackend/users/: adapters.py  apps.py  authentication.py  models.py  serializers.py  urls.py  utils.py  views.py
genaibackend/users/api/: serializers.py  views.py
genaibackend/users/migrations/: 0001_initial.py
genaibackend/users/tests/: factories.py  test_admin.py  test_auth.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: local.txt
(+2 files in other folders)
