[tool.poetry]
name = "genaibackend"
version = "0.1.0"
description = ""
authors = ["dogppatrick <dogppatrick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argon2-cffi = "^23.1.0"
celery = "^5.4.0"
channels = "^4.2.0"
cookiecutter = "^2.6.0"
crispy-bootstrap5 = "^2024.10"
django = "^5.1.7"
django-allauth = {extras = ["mfa"], version = "^65.4.1"}
django-celery-beat = "^2.7.0"
django-cors-headers = "^4.7.0"
django-crispy-forms = "^2.3"
django-debug-toolbar = "^5.0.1"
django-environ = "^0.12.0"
django-extensions = "^3.2.3"
django-redis = "^5.4.0"
django-storages = "^1.14.5"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.28.0"
drf-yasg = "^1.21.10"
flower = "^2.0.1"
pillow = "^11.1.0"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
sentry-sdk = {extras = ["django"], version = "^2.22.0"}
whitenoise = "^6.9.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ipython = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
